--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ackermann_msgs
-	previous = 
-	base = c3bec7eef1dc
+	previous = c3bec7eef1dc
+	base = fd71c26665fb
 	trim = 
 	trimbase = 
