--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ackermann_msgs
+	parent = release/rolling/ackermann_msgs/2.0.2-5
 	previous = c3bec7eef1dc
 	base = 9a7e8597feb8
 	trim = 
